fix: increase z-index of floating emoji picker

--- a/src/components/message-pane/styles.module.scss
+++ b/src/components/message-pane/styles.module.scss
@@ -287,7 +287,7 @@ body .floating.floatingSlowModeIndicator {
 
     &.floatingMessageEmojiPicker {
       position: absolute;
-      z-index: 9999999;
+      z-index: 111111111;
       right: 0;
       bottom: 50px;
       left: 60px;
